[tool.poetry]
name = "bot-kc"
version = "0.1.0"
description = ""
authors = ["CHAMOMILE <CHAMOM2LES@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
typing-extensions = "^4.9.0"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
jinja2 = "^3.1.3"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
